new microservice and other features